# savory

./: .gitlab-ci.yml  Cargo.toml  LICENSE-MIT  README.MD
cli/: Cargo.toml  README.MD
core/: Cargo.toml  README.MD
core/src/: element.rs  env.rs  events.rs  html.rs  lib.rs  node.rs  orders.rs  orders_ext.rs  traits.rs  view.rs
derive/: Cargo.toml
derive/src/: element.rs  lib.rs
derive/src/old_element/attr/: mod.rs
design-system/: Cargo.toml
design-system/src/: lib.rs
docs-resources/: counter-element.webm  counter-using-savory-elements.webm  simple-counter.webm
elements/: Cargo.toml  README.MD
elements-derive/: Cargo.toml
elements-derive/src/: element.rs
elements/examples/all_elements/: Cargo.toml
elements/examples/all_elements/src/: lib.rs
elements/examples/counter/: Cargo.toml
elements/examples/full_counter/: Cargo.toml
elements/src/: animator.rs  data_lens.rs  design_system.rs  env.rs  id.rs  lib.rs  rerender.rs  screen_info_notifier.rs  styled_view.rs  traits.rs
elements/src/design_system/: default_ds.rs  mod.rs
elements/src/element/: button.rs  checkbox.rs  dialog.rs  entry.rs  header_bar.rs  mod.rs  popover.rs  progress_bar.rs  radio.rs  slider.rs  spin_entry.rs  switch.rs  text_input.rs
elements/src/element/helper/: animator.rs  mod.rs  screen_info_notifier.rs  toggle.rs
elements/src/layout/flex/: item.rs  mod.rs
elements/src/layout/flexbox/: mod.rs
elements/src/theme/: ant.rs  mod.rs
elements/src/view/: header_bar.rs  image.rs  label.rs  mod.rs  modifier.rs  svg.rs  text.rs
elements/src/view/flexbox/: item.rs  mod.rs
elements/src/view/icon/: html.rs  mod.rs  svg.rs  url.rs
examples/all_elements/: Cargo.toml
examples/all_elements/src/: lib.rs
examples/counter/: Cargo.toml
examples/counter/src/: lib.rs
examples/counter_element/: Cargo.toml
examples/counter_element/src/: lib.rs
examples/counter_using_elements/: Cargo.toml
examples/counter_using_elements/src/: lib.rs
examples/full_counter/: Cargo.toml
examples/full_counter/src/: lib.rs
examples/router/: Cargo.toml
examples/router/src/: lib.rs
examples/router/src/pages/: error.rs  home.rs  mod.rs
examples/router/src/pages/users/: error.rs  mod.rs  user.rs
examples/server/: Cargo.toml  index.html
examples/server/src/: main.rs
examples/simple_counter/: Cargo.toml
examples/simple_counter/src/: lib.rs
examples/testing/: Cargo.toml
examples/testing/src/: lib.rs
html/: Cargo.toml  README.MD
html/src/: attribute.rs  events.rs  html.rs  lib.rs  seed_ext.rs
html/src/css/: background.rs  border.rs  box_align.rs  box_shadow.rs  color.rs  cursor.rs  display.rs  flexbox.rs  font.rs  gap.rs  margin.rs  mod.rs  padding.rs  position.rs  size.rs  style.rs  text.rs  transition.rs  unit.rs  values.rs  visibility.rs
icons/: Cargo.toml
khalas_macros/: Cargo.toml
khalas_macros/src/element/attr/: lens.rs  mod.rs
router/: Cargo.toml
router/src/: lib.rs
savory_elements/: Cargo.toml
savory_elements/src/: lib.rs
savory_elements/src/control/: button.rs  checkbox.rs  dialog.rs  entry.rs  menu_button.rs  progress_bar.rs  radio.rs  spin_entry.rs  switch.rs
savory_elements/src/display/: header_bar.rs  label.rs  popover.rs
savory_elements/src/display/flexbox/: item.rs  mod.rs
savory_elements/src/display/icon/: html.rs  mod.rs  svg.rs  url.rs
savory_elements/src/theme/: ant.rs  mod.rs
savory_html/: Cargo.toml
savory_html/src/: el.rs  events.rs  lib.rs  seed_ext.rs
savory_html/src/css/: background.rs  border.rs  color.rs  display.rs  flexbox.rs  font.rs  margin.rs  mod.rs  position.rs  size.rs  style.rs
savory_macros/: Cargo.toml
savory_macros/src/: element.rs  lib.rs
savory_macros/src/element/: field.rs  mod.rs
savory_macros/src/element/attr/: lens.rs  props.rs
src/: attribute.rs  element.rs  events.rs  lib.rs  macros.rs  model.rs  msg_mapper.rs  orders_ext.rs  propertie.rs  render.rs  routable.rs  seed_ext.rs  theme.rs  view.rs
src/css/: background.rs  border.rs  box_align.rs  color.rs  common.rs  cursor.rs  display.rs  flexbox.rs  font.rs  gap.rs  margin.rs  mod.rs  padding.rs  position.rs  size.rs  style.rs  text.rs  transition.rs  unit.rs  values.rs  visibility.rs
src/el/: button.rs  icon.rs  mod.rs
src/el/control/: button.rs  checkbox.rs  dialog.rs  entry.rs  menu_button.rs  mod.rs  progress_bar.rs  radio.rs  spin_entry.rs  switch.rs
src/el/display/: flexbox.rs  header_bar.rs  icon.rs  label.rs  mod.rs  popover.rs
src/el/effect/: ripple.rs
src/el/layout/: flexbox.rs  mod.rs
src/properties/: alignment.rs  background.rs  border.rs  box_align.rs  color.rs  gap.rs  margin.rs  mod.rs  padding.rs  size.rs
src/theme/: ant.rs  default.rs  matieral.rs  mod.rs  simple.rs
style/: Cargo.toml
style/src/: background.rs  border.rs  box_align.rs  box_shadow.rs  calc.rs  color.rs  cursor.rs  display.rs  flexbox.rs  font.rs  gap.rs  lib.rs  margin.rs  node.rs  padding.rs  position.rs  size.rs  style.rs  text.rs  transition.rs  unit.rs  values.rs  visibility.rs
theme/: Cargo.toml
