[package]
name = "khalas"
description = "UI Library based on Seed"
version = "0.2.0"
authors = ["Muhannad Alrusayni <Muhannad.Alrusayni@gmail.com>"]
edition = "2018"
readme = "README.MD"
keywords = ["web", "seed", "SPA", "wasm", "framework"]
categories = ["gui", "wasm", "web-programming"]
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/muhannad_alrusayni/khalas"
homepage = "https://gitlab.com/muhannad_alrusayni/khalas"
documentation = "https://docs.rs/khalas"

[badges]
gitlab = { repository = "https://gitlab.com/muhannad_alrusayni/khalas", branch = "master" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed = { git = "https://github.com/David-OConnor/seed", version = "0.6.0" }
palette = "0.4.1"
derive_more = "0.99.2"
derive_rich = { git = "https://gitlab.com/muhannad_alrusayni/derive_rich", version = "0.2.0" }
wasm-bindgen = "0.2.58"
indexmap = "1.3.2"

[dependencies.web-sys]
version = "^0.3.35"
features = [
    "WheelEvent", "CompositionEvent", "HtmlInputElement", "InputEvent",
    "FocusEvent", "DragEvent", "DomRect", "Element"
]

[workspace]
members = [
    "examples/testing",
    "examples/counter",
    "examples/server"
]
