[package]
name = "savory"
description = "Library for building user interface"
version = "0.3.0"
authors = ["Muhannad Alrusayni <Muhannad.Alrusayni@gmail.com>"]
edition = "2018"
readme = "README.MD"
keywords = ["web", "seed", "SPA", "wasm", "framework"]
categories = ["gui", "wasm", "web-programming"]
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/MAlrusayni/savory"
homepage = "https://gitlab.com/MAlrusayni/savory"
documentation = "https://docs.rs/savory"

[badges]
gitlab = { repository = "MAlrusayni/savory", branch = "master" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed = { git = "https://github.com/David-OConnor/seed", version = "0.6.0" }

[workspace]
members = [
    "savory_macros",
    "savory_elements",
    "savory_html",
    "examples/counter",
    "examples/all_elements"
]
