[package]
name = "savory-core"
description = "Library for building user interface"
version = "0.4.0"
authors = ["Muhannad Alrusayni <Muhannad.Alrusayni@gmail.com>"]
edition = "2018"
readme = "../README.MD"
keywords = ["web", "seed", "SPA", "wasm", "framework"]
categories = ["gui", "wasm", "web-programming"]
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/MAlrusayni/savory/tree/master/core"
homepage = "https://gitlab.com/MAlrusayni/savory"
documentation = "https://docs.rs/savory-core"
include = [ "src/**/*", "Cargo.toml", "README.MD" ]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed = "0.7.0"

[dev-dependencies]
savory-html = { path = "../html" }
wasm-bindgen = "0.2.55"
