[package]
name = "savory"
description = "Core library for building user interface"
version = "0.6.0"
authors = ["Muhannad Alrusayni <Muhannad.Alrusayni@gmail.com>"]
edition = "2018"
readme = "../README.MD"
keywords = ["savory", "seed", "element", "component", "SPA"]
categories = ["gui", "wasm", "web-programming"]
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/MAlrusayni/savory/tree/master/core"
homepage = "https://gitlab.com/MAlrusayni/savory"
documentation = "https://docs.rs/savory"
include = [ "src/**/*", "Cargo.toml" ]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
seed = "0.8.0"
paste = "1.0.4"
type-map = "0.5.0"

[dependencies.web-sys]
version = "^0.3.45"
features = [
    "FocusEvent", "CompositionEvent", "WheelEvent",
]

[dev-dependencies]
savory-style = { path = "../style" }
