[package]
name = "savory-ds"
version = "0.6.0"
authors = ["Muhannad Alrusayni <Muhannad.Alrusayni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
savory = { version = "0.6.0", path = "../core" }
savory-style = { version = "0.6.0", path = "../style" }
savory-elements = { version = "0.6.0", path = "../elements" }

palette = "0.5.0"
