[package]
name = "savory-elements-derive"
description = "Crate that provide `Element` derive"
version = "0.6.0"
authors = ["Muhannad Alrusayni <Muhannad.Alrusayni@gmail.com>"]
edition = "2018"
readme = "../README.MD"
keywords = ["savory", "seed", "element", "component", "SPA"]
categories = ["gui", "wasm", "web-programming"]
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/MAlrusayni/savory/tree/master/elements-derive"
homepage = "https://gitlab.com/MAlrusayni/savory"
documentation = "https://docs.rs/savory-elements-derive"
include = [ "src/**/*", "Cargo.toml" ]

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.13", features = ["full", "extra-traits"] }
quote = "1.0.2"
proc-macro2 = "1.0.7"
darling = "0.10.2"
