[package]
name = "savory-elements"
description = "UI Elements built using Savory"
version = "0.5.1"
authors = ["Muhannad Alrusayni <Muhannad.Alrusayni@gmail.com>"]
edition = "2018"
readme = "../README.MD"
keywords = ["savory", "seed", "element", "component", "SPA"]
categories = ["gui", "wasm", "web-programming"]
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/MAlrusayni/savory/tree/master/elements"
homepage = "https://gitlab.com/MAlrusayni/savory"
documentation = "https://docs.rs/savory-elements"
include = [ "src/**/*", "Cargo.toml", "README.MD" ]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
savory-core = { version = "0.5.1", path = "../core" }
savory-html = { version = "0.5.1", path = "../html" }
savory-derive = { version = "0.5.1", path = "../derive" }

derive_rich = "0.4.3"
derive_more = "0.99.2"
palette = "0.4.1"
seed = "0.7.0"
instant = { version = "0.1.3", features = [ "now", "wasm-bindgen" ] }

[dependencies.web-sys]
version = "^0.3.35"
features = [
    "WheelEvent", "CompositionEvent", "HtmlInputElement", "InputEvent",
    "FocusEvent", "DragEvent", "DomRect", "Element", "HtmlLabelElement",
    "UiEvent"
]
