[package]
name = "savory-elements"
description = "Collection of UI elements based on Savory"
version = "0.6.0"
authors = ["Muhannad Alrusayni <Muhannad.Alrusayni@gmail.com>"]
edition = "2018"
readme = "../README.MD"
keywords = ["savory", "seed", "element", "component", "SPA"]
categories = ["gui", "wasm", "web-programming"]
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/MAlrusayni/savory/tree/master/elements"
homepage = "https://gitlab.com/MAlrusayni/savory"
documentation = "https://docs.rs/savory-elements"
include = [ "src/**/*", "Cargo.toml" ]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
savory = { version = "0.6.0", path = "../core" }
savory-style = { version = "0.6.0", path = "../style" }
savory-elements-derive = { version = "0.6.0", path = "../elements-derive" }

palette = "0.5.0"
derive_more = "0.99.11"
derive_rich = "0.4.4"
