[package]
name = "savory_html"
description = "Plain HTML views for Savory"
version = "0.3.0"
authors = ["Muhannad Alrusayni <Muhannad.Alrusayni@gmail.com>"]
edition = "2018"
readme = "README.MD"
keywords = ["savory", "seed", "views", "html", "web"]
categories = ["gui", "wasm", "web-programming"]
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/MAlrusayni/savory/html"
homepage = "https://gitlab.com/MAlrusayni/savory/html"
documentation = "https://docs.rs/savory_html"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
savory_core = { path = "../core" }

seed = { git = "https://github.com/David-OConnor/seed", version = "0.6.0" }
derive_rich = { git = "https://gitlab.com/MAlrusayni/derive_rich", version = "0.4.1" }
palette = "0.4.1"
derive_more = "0.99.2"
indexmap = "1.3.2"
chrono = "0.4.10"
mime = "0.3.16"
regex = "1.3.4"
wasm-bindgen = "0.2.58"

[dependencies.web-sys]
version = "^0.3.35"
features = [
    "WheelEvent", "CompositionEvent", "HtmlInputElement", "InputEvent",
    "FocusEvent", "DragEvent", "DomRect", "Element", "HtmlLabelElement",
    "UiEvent"
]
