[package]
name = "savory-html"
description = "Typed HTML for Savory"
version = "0.5.1"
authors = ["Muhannad Alrusayni <Muhannad.Alrusayni@gmail.com>"]
edition = "2018"
readme = "README.MD"
keywords = ["savory", "seed", "css", "html", "web"]
categories = ["gui", "wasm", "web-programming"]
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/MAlrusayni/savory/tree/master/html"
homepage = "https://gitlab.com/MAlrusayni/savory"
documentation = "https://docs.rs/savory-html"
include = [ "src/**/*", "Cargo.toml", "README.MD" ]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
savory-core = { verison = "0.5.0", path = "../core" }

seed = "0.7.0"
derive_rich = "0.4.3"
palette = "0.4.1"
derive_more = "0.99.2"
indexmap = "1.3.2"
chrono = "0.4.10"
mime = "0.3.16"
regex = "1.3.4"
wasm-bindgen = "0.2.58"
paste = "0.1.10"

[dependencies.web-sys]
version = "^0.3.35"
features = [
    "WheelEvent", "CompositionEvent", "HtmlInputElement", "InputEvent",
    "FocusEvent", "DragEvent", "DomRect", "Element", "HtmlLabelElement",
    "UiEvent"
]
