[package]
name = "all_elements"
version = "0.1.0"
authors = ["Muhannad Alrusayni <Muhannad.Alrusayni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
savory = { path = "../../" }
savory_elements = { path = "../../savory_elements" }
savory_html = { path = "../../savory_html" }
seed = { git = "https://github.com/David-OConnor/seed" }
web-sys = "^0.3"
wasm-bindgen = "0.2.55"
