[package]
name = "counter-using-elements"
version = "0.1.0"
authors = ["Muhannad Alrusayni <Muhannad.Alrusayni@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
savory = { path = "../../core" }
savory-elements = { path = "../../elements" }
savory-style = { path = "../../style" }
