[package]
name = "simple-counter"
version = "0.1.0"
authors = ["Muhannad Alrusayni <Muhannad.Alrusayni@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
savory-core = { path = "../../core" }
savory-elements = { path = "../../elements" }
savory-html = { path = "../../html" }
wasm-bindgen = "0.2.55"
derive_rich = "0.4.1"
