[package]
name = "testing"
version = "0.1.0"
authors = ["Muhannad Alrusayni <Muhannad.Alrusayni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# seed = { git = "https://github.com/David-OConnor/seed" }
seed = { path = "../../../seed" }
web-sys = "^0.3"
khalas = { path = "../../" }
derive_rich = { path = "../../../derive_rich" }
wasm-bindgen = "0.2.55"
